Fix '(Optional)' flag not showing on preview/runner views

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -382,45 +382,6 @@ html {
 }
 
 
-/* Question
- * -------- */
-.Question {
-  legend, label {
-    @include govuk-responsive-margin(8, "bottom");
-
-    h1 {
-      display: inline;
-      & + .flag {
-        @include govuk-font($size: 48);
-        display: inline-block;
-        font-weight: bold;
-      }
-
-      &.active {
-        display: inline-block;
-      }
-    }
-  }
-
-  legend, label {
-    @include govuk-responsive-margin(8, "bottom");
-
-    h2 {
-      display: inline;
-      & + .flag {
-        @include govuk-font($size: 24);
-        display: inline-block;
-        font-weight: bold;
-      }
-
-      &.active {
-        display: inline-block;
-      }
-    }
-  }
-}
-
-
 /* Question Menu
  * ------------- */
 .QuestionMenu {
